[package]
name = "natte"
version = "0.1.0"
authors = ["Șerban Robu <serbanrobu@protonmail.com>"]
edition = "2018"

[dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
http-types = "2.10.0"
open = "1.6.0"
serde = { version = "1.0.125", features = ["derive"] }
structopt = "0.3.21"
surf = "2.2.0"
tide = "0.16.0"
